fix: missing border at tome of tables

--- a/style/components/table.css
+++ b/style/components/table.css
@@ -6,6 +6,7 @@
 
     thead {
       @apply bg-gray-300 dark:bg-gray-800;
+      @apply border-t border-slate-200 dark:border-slate-600;
 
       tr {
         th {
